# simpidlog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
docs/: README_zh-cn.md
examples/: basic.cpp
include/: simpidlog.hpp
include/simpidlog/: colorful.hpp  simpidlog.hpp
src/: simpidlog.cpp
src/simpidlog/: __init__.py  colorful.py  logger.py
tests/: test_simpidlog.cpp
